--- a/c++/Demon/Makefile
+++ b/c++/Demon/Makefile
@@ -1,5 +1,9 @@
-
-run: dir_in_dir.o
-	gcc -o run dir_in_dir.o
-dir_in_dir.o: dir_in_dir.c
-	gcc -c dir_in_dir.c
+binary: main.o libDirFinder.a
+	gcc -o binary main.o -L -libDirFinder
+main.o: main.c
+	gcc -c main.c
+libDirFinder.a: dirFinder.o
+	ar cr libDirFinder.a dirFinder.o
+dirFinder.o: dirFinder.c
+	gcc -c dirFinder.c
+clean: rm -f *.o *.a binary
