--- a/c++/Demon/Makefile
+++ b/c++/Demon/Makefile
@@ -1,9 +1,4 @@
-binary: main.o libDirFinder.a
-	gcc -o binary main.o -L -libDirFinder
+binary: main.o
+	gcc -o binary main.o 
 main.o: main.c
 	gcc -c main.c
-libDirFinder.a: dirFinder.o
-	ar cr libDirFinder.a dirFinder.o
-dirFinder.o: dirFinder.c
-	gcc -c dirFinder.c
-clean: rm -f *.o *.a binary
